--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "metabolismsim",
   "version": "1.0.0",
-  "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1",  // 確保這行存在
     "lucide-react": "^0.343.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
