--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "metabolismsim",
   "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
